based section heights with padding and fixed icons (moved them a little right) so eveyrthing looks more normal on iphones

--- a/css/style.css
+++ b/css/style.css
@@ -91,9 +91,13 @@
 
 /* ************ */
 
+.whitebackground {
+  background-color: white;
+}
+
 .section {
     background-color: width: 100vw;
-    height: 100vh;
+    /*height: 100vh;*/
     display: block;
     z-index: 2;
 }
@@ -115,15 +119,16 @@
     transform: translate(-50%, -50%);
 }
 #second {
-    margin-top: 300 height: calc(100vh + 30px);
-    width: 80%;
+    margin-top: 300;
+    width: 90%;
     margin-right: auto;
     margin-left: auto;
     display: block-inline;
+    padding-bottom: 3em;
 }
 #howitworks #title {
     font-size: 50px;
-    font-family: 'ClearSans', 'OpenSans', sans-serif;
+    font-family: 'ClearSans';
     color: #2BA9E0;
 }
 #howitworks {
@@ -142,34 +147,31 @@
     position: relative;
     top: 35px;
 }
-#howitworks #icon {
-    /*background-color: blue;*/
+#howitworks #iconr {
+  margin-left: 25px;
 }
 
-#whitebackground {
-  background-color: white;
-  z-index:-20;
-}
+
 
 
 #title3 {
   font-size: 50px;
-  font-family: 'ClearSans', 'OpenSans', sans-serif;
+  font-family: 'ClearSans';
   /*color: #2BA9E0;*/
   padding-bottom: 20px;
 }
 .values {
     width: 100%;
     background-color: #ECF0F1;
-    height: calc(100vh - 70px);
-    padding-top: 140px;
-    padding-bottom: 30px;
+    /*height: calc(100vh - 70px);*/
+    padding-top: 100px;
+    padding-bottom: 170px;
 }
 
 .type {
     display: table;
     margin-left: auto;
-    font-family: 'ClearSans', 'OpenSans', sans-serif;
+    font-family: 'ClearSans';
     font-size: 15px;
     padding-top: 30px;
 }
@@ -188,7 +190,7 @@ h4 {
     display: table;
     margin: 0 auto;
     text-align: center;
-    font-family: 'ClearSans', 'OpenSans', sans-serif;
+    font-family: 'ClearSans';
     font-size: 20px;
     padding-top: 20px
 }
@@ -245,7 +247,7 @@ img:hover {
 span.blurb {
     width: 75%;
     font-size: 0.8em;
-    font-family: 'ClearSans', 'OpenSans', sans-serif;
+    font-family: 'ClearSans';
 }
 .section-contents {
     max-width: 960px;
@@ -298,7 +300,7 @@ video {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -10;
+    z-index: -100;
     transform: translateX(-50%) translateY(-50%);
     background: url('img/frame1.png') no-repeat;
     background-size: cover;
